# auto_clean

./: .gitignore  CMakeLists.txt  README.md
config/: auto_clean.yaml
src/: CMakeLists.txt  conf-yaml-loader.cpp  conf-yaml-loader.h  conf.cpp  conf.h  main.cpp  manager.cpp  manager.h  tm-threads.cpp  tm-threads.h  util-disk.cpp  util-disk.h  util-file.cpp  util-file.h  util-path.cpp  util-path.h  util-pidfile.cpp  util-pidfile.h  util-queue.h  util-strlcatu.cpp  util-strlcatu.h  util-strlcpyu.cpp  util-strlcpyu.h  util-threads.cpp  util-threads.h  worker.cpp  worker.h
src/util/: cmdline.hpp  config.cpp  config.h  log.cpp  log.h  pidfile.cpp  pidfile.h
